# Restaurant_to_check

./: .env_sample  Dockerfile  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
restaurant/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_initial.py
restaurant/templates/restaurant/: about.html  base.html  contacts.html  gallery.html  index.html  menu.html
restaurant/templatetags/: custom_filters.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu_and_initial_data.py
users/migrations/: 0001_initial.py
