[tool.poetry]
name = "restaurant-to-check"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.3.0"
django = "^5.2.5"
pillow = "^11.3.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
django-phonenumber-field = "^8.1.0"
celery = "^5.5.3"
django-celery-beat = "^2.8.1"
gevent = "^25.8.2"
redis = "^6.4.0"
docker = "^7.1.0"
compose = "^1.6.2"
django-countries = "^7.6.1"
django-phonenumbers = "^1.0.1"
django-cors-headers = "^4.7.0"
flake8-html = "^0.4.3"
flower = "^2.0.1"
isort = "^6.0.1"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
